Product single page (part 2 of 2). Released sticky header. Code refactoring.

--- a/app/page-brands-single.html
+++ b/app/page-brands-single.html
@@ -18,76 +18,371 @@
 	<div class="page-content">
 		<div class="container">
 			<div class="section-heading mb-32">
-				<h1 class="title">Doorhan</h1>
+				<h1 class="title">Came</h1>
 			</div>
 
 			<!-- Brand single page -->
-			<div class="brands-single">
+			<div class="s-brands">
 
 				<!-- Rubrics -->
-				<div class="row row-items-32 row-cols-1 row-cols-sm-2 row-cols-md-3">
-					<div class="col">
-						<a href="#" class="card card-simple">
-							<div class="card-photo img-cover rounded-8">
-								<img src="images/dist/brands-photo-1.jpg" alt="">
-							</div>
-							<div class="card-meta">
-								<h5 class="title text-uppercase">Подъемные секционные ворота Doorhan</h5>
-							</div>
-						</a>
-					</div><!-- /.col -->
-					<div class="col">
-						<a href="#" class="card card-simple">
-							<div class="card-photo img-cover rounded-8">
-								<img src="images/dist/brands-photo-1.jpg" alt="">
-							</div>
-							<div class="card-meta">
-								<h5 class="title text-uppercase">Автоматика для гаражных ворот DoorHan</h5>
-							</div>
-						</a>
-					</div><!-- /.col -->
-					<div class="col">
-						<a href="#" class="card card-simple">
-							<div class="card-photo img-cover rounded-8">
-								<img src="images/dist/brands-photo-1.jpg" alt="">
-							</div>
-							<div class="card-meta">
-								<h5 class="title text-uppercase">Автоматические шлагбаумы DoorHan</h5>
-							</div>
-						</a>
-					</div><!-- /.col -->
-					<div class="col">
-						<a href="#" class="card card-simple">
-							<div class="card-photo img-cover rounded-8">
-								<img src="images/dist/brands-photo-1.jpg" alt="">
-							</div>
-							<div class="card-meta">
-								<h5 class="title text-uppercase">Автоматика для откатных ворот DoorHan</h5>
-							</div>
-						</a>
-					</div><!-- /.col -->
-					<div class="col">
-						<a href="#" class="card card-simple">
-							<div class="card-photo img-cover rounded-8">
-								<img src="images/dist/brands-photo-1.jpg" alt="">
-							</div>
-							<div class="card-meta">
-								<h5 class="title text-uppercase">Автоматика для распашных ворот DoorHan</h5>
-							</div>
-						</a>
-					</div><!-- /.col -->
-					<div class="col">
-						<a href="#" class="card card-simple">
-							<div class="card-photo img-cover rounded-8">
-								<img src="images/dist/brands-photo-1.jpg" alt="">
-							</div>
-							<div class="card-meta">
-								<h5 class="title text-uppercase">Пульты DoorHan (Дорхан)</h5>
-							</div>
-						</a>
-					</div><!-- /.col -->
-				</div><!-- /.row -->
-
+				<section class="mt-48">
+					<div class="section-heading mb-32">
+						<h2 class="title">Подъемные секционные ворота</h2>
+					</div>
+					<div class="s-brands-products row row-items-24 row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4">
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title  text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+					</div><!-- /.row -->
+				</section>
+				<section class="mt-48">
+					<div class="section-heading mb-32">
+						<h2 class="title">Шлагбаумы</h2>
+					</div>
+					<div class="s-brands-products row row-items-24 row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4">
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title  text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+					</div><!-- /.row -->
+				</section>
+				<section class="mt-48">
+					<div class="section-heading mb-32">
+						<h2 class="title">Пульты</h2>
+					</div>
+					<div class="s-brands-products row row-items-24 row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4">
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title  text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+						<div class="col">
+							<a href="page-shop-product.html" class="s-brands-products-item">
+								<div class="s-brands-products-photo img-scale">
+									<img src="images/dist/products/1.png" alt="">
+								</div>
+								<div class="s-brands-products-meta">
+									<span class="title text-xxs">CAME SALOON 605 001PSSL605S</span>
+									<div class="price">
+										<ins>15 200 руб.</ins>
+										<del>16 900 руб.</del>
+									</div>
+								</div>
+							</a>
+						</div><!-- /.col -->
+					</div><!-- /.row -->
+				</section>
+				
 				<!-- Article -->
 				<div class="row justify-content-center mt-64">
 					<article class="col-lg-10 col-xxl-8">
