--- a/app/parts/modals/buy-one-click.html
+++ b/app/parts/modals/buy-one-click.html
@@ -1,6 +1,6 @@
-<!-- Modal: Buy in one click -->
+<!-- Modal: Купить в 1 клик -->
 <div class="modal modal-quick-buy fade" id="buyOneClickModal" tabindex="-1" role="dialog">
-	<div class="modal-dialog modal-dialog-centered" role="document">
+	<div class="modal-dialog modal-dialog-lg modal-dialog-centered" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="title text-lg w-bold text-center">Купить в 1 клик</h5>
