--- a/app/parts/modals/callback.html
+++ b/app/parts/modals/callback.html
@@ -1,4 +1,4 @@
-<!-- Modal: Callback -->
+<!-- Modal: Заказать обратный звонок -->
 <div class="modal fade" id="callbackModal" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
