--- a/app/parts/modals/check-order-status.html
+++ b/app/parts/modals/check-order-status.html
@@ -1,4 +1,4 @@
-<!-- Modal: Check order status -->
+<!-- Modal: Что с моим заказом? -->
 <div class="modal fade" id="checkOrderStatusModal" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
