--- a/app/parts/modals/free-advice.html
+++ b/app/parts/modals/free-advice.html
@@ -1,4 +1,4 @@
-<!-- Modal: Free advice -->
+<!-- Modal: Бесплатная консультация -->
 <div class="modal fade" id="freeAdviceModal" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
