--- a/app/parts/modals/privacy-policy.html
+++ b/app/parts/modals/privacy-policy.html
@@ -1,6 +1,6 @@
-<!-- Modal: Privacy policy -->
+<!-- Modal: Политика конфиденциальности -->
 <div class="modal modal-policy fade" id="privacyPolicyModal" tabindex="-1" role="dialog">
-	<div class="modal-dialog modal-dialog-centered" role="document">
+	<div class="modal-dialog modal-dialog-lg modal-dialog-centered" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="title text-lg w-bold">Политика конфиденциальности</h5>
