--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -159,6 +159,8 @@
 
 	<!--#include virtual="/parts/modals/quick-view-product.html" -->
 
+	<!--#include virtual="/parts/modals/discount-product.html" -->
+
 	<script src="js/app.min.js"></script>
 
 </body>
