Fix tooltip position on mobile devices.

--- a/app/parts/products-card/product-1.html
+++ b/app/parts/products-card/product-1.html
@@ -3,7 +3,7 @@
 		<button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#quickViewProductModal">Быстрый просмотр</button>
 	</div>
 	<div class="card-label card-label--yellow">−15%</div>
-	<a href="#" class="card-gallery" title="Alutech RTO-1000MKIT автоматика для откатных ворот">
+	<a href="page-shop-product.html" class="card-gallery" title="Alutech RTO-1000MKIT автоматика для откатных ворот">
 		<div class="card-gallery-item _active">
 			<span class="card-gallery-item-nav"></span>
 			<img class="lazy" src="./images/dist/products/1.png" alt="">
@@ -33,7 +33,7 @@
 	<div class="card-body">
 		<div class="card-meta">
 			<div class="stock stock-in">В наличии</div>
-			<a href="#" class="permalink blue-link">Alutech RTO-1000MKIT автоматика для откатных ворот</a>
+			<a href="page-shop-product.html" class="permalink blue-link">Alutech RTO-1000MKIT автоматика для откатных ворот</a>
 			<div class="price">
 				<ins>15 800 Руб.</ins>
 				<del>17 400 Руб.</del>
