--- a/app/parts/products-card/product-3.html
+++ b/app/parts/products-card/product-3.html
@@ -3,7 +3,7 @@
 		<button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#quickViewProductModal">Быстрый просмотр</button>
 	</div>
 	<div class="card-label card-label--blue">Новинка</div>
-	<a href="#" class="card-gallery" title="Привод для распашных ворот линейный до 800 кг">
+	<a href="page-shop-product.html" class="card-gallery" title="Привод для распашных ворот линейный до 800 кг">
 		<div class="card-gallery-item _active">
 			<span class="card-gallery-item-nav"></span>
 			<img class="lazy" src="./images/dist/products/3.jpg" alt="">
@@ -18,7 +18,7 @@
 	<div class="card-body">
 		<div class="card-meta">
 			<div class="stock stock-out">Нет в наличии</div>
-			<a href="#" class="permalink blue-link">Привод для распашных ворот линейный до 800 кг</a>
+			<a href="page-shop-product.html" class="permalink blue-link">Привод для распашных ворот линейный до 800 кг</a>
 			<div class="price">
 				<ins>41 390 Руб.</ins>
 			</div>
