--- a/app/parts/products-card/product-4.html
+++ b/app/parts/products-card/product-4.html
@@ -3,7 +3,7 @@
 		<button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#quickViewProductModal">Быстрый просмотр</button>
 	</div>
 	<div class="card-label card-label--green">Выбор покупателей</div>
-	<a href="#" class="card-gallery" title="Came 001A5000A привод для распашных ворот линейный до 1000 кг">
+	<a href="page-shop-product.html" class="card-gallery" title="Came 001A5000A привод для распашных ворот линейный до 1000 кг">
 		<div class="card-gallery-item _active">
 			<span class="card-gallery-item-nav"></span>
 			<img class="lazy" src="./images/dist/products/4.jpg" alt="">
@@ -18,7 +18,7 @@
 	<div class="card-body">
 		<div class="card-meta">
 			<div class="stock stock-order">Под заказ</div>
-			<a href="#" class="permalink blue-link">Came 001A5000A привод для распашных ворот линейный до 1000 кг</a>
+			<a href="page-shop-product.html" class="permalink blue-link">Came 001A5000A привод для распашных ворот линейный до 1000 кг</a>
 			<div class="price">
 				<ins>55 900 Руб.</ins>
 				<del>49 200 Руб.</del>
