--- a/app/parts/products-card/product-5.html
+++ b/app/parts/products-card/product-5.html
@@ -3,7 +3,7 @@
 		<button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#quickViewProductModal">Быстрый просмотр</button>
 	</div>
 	<div class="card-label card-label--orange">Лидер продаж</div>
-	<a href="#" class="card-gallery" title="CAME KRONO COMBO CLASSICO автоматика для распашных ворот">
+	<a href="page-shop-product.html" class="card-gallery" title="CAME KRONO COMBO CLASSICO автоматика для распашных ворот">
 		<div class="card-gallery-item _active">
 			<span class="card-gallery-item-nav"></span>
 			<img class="lazy" src="./images/dist/products/6.jpg" alt="">
@@ -23,7 +23,7 @@
 	<div class="card-body">
 		<div class="card-meta">
 			<div class="stock stock-removed">Снято с прозводства</div>
-			<a href="#" class="permalink blue-link">CAME KRONO COMBO CLASSICO автоматика для распашных ворот</a>
+			<a href="page-shop-product.html" class="permalink blue-link">CAME KRONO COMBO CLASSICO автоматика для распашных ворот</a>
 			<div class="price">
 				<ins>38 200 Руб.</ins>
 				<del>14 900 Руб.</del>
