--- a/app/parts/products-card/product-6.html
+++ b/app/parts/products-card/product-6.html
@@ -3,14 +3,14 @@
 		<button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#quickViewProductModal">Быстрый просмотр</button>
 	</div>
 	<div class="card-label card-label--gray">В архиве</div>
-	<a href="#" class="card-photo" title="Автоматика для откатных ворот">
+	<a href="page-shop-product.html" class="card-photo" title="Автоматика для откатных ворот">
 		<img class="lazy" src="./images/dist/products/6.jpg" alt="">
 		<div class="lazy-spin"></div>
 	</a>
 	<div class="card-body">
 		<div class="card-meta">
 			<div class="stock stock-archive">В архиве</div>
-			<a href="#" class="permalink blue-link">Автоматика для откатных ворот</a>
+			<a href="page-shop-product.html" class="permalink blue-link">Автоматика для откатных ворот</a>
 			<div class="price">
 				<ins>19 000 Руб.</ins>
 			</div>
