--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -71,28 +71,28 @@
 					<div class="col-auto header-top-nav">
 						<ul class="menu-list">
 							<li class="has-dropdown">
-								<a href="#">О компании</a>
+								<a href="page-about.html">О компании</a>
 								<ul>
-									<li><a href="#">Отзывы</a></li>
-									<li><a href="#">Сертификаты</a></li>
-									<li><a href="#">Наши клиенты</a></li>
+									<li><a href="page-testimonials.html">Отзывы</a></li>
+									<li><a href="page-certificates.html">Сертификаты</a></li>
+									<li><a href="page-clients.html">Наши клиенты</a></li>
 								</ul>
 							</li>
-							<li><a href="#">Доставка</a></li>
-							<li><a href="#">Оплата</a></li>
+							<li><a href="page-delivery.html">Доставка</a></li>
+							<li><a href="page-payment.html">Оплата</a></li>
 							<li class="has-dropdown">
 								<a href="#">Покупателю</a>
 								<ul>
-									<li><a href="#">Отзывы</a></li>
-									<li><a href="#">Сертификаты</a></li>
-									<li><a href="#">Наши клиенты</a></li>
+									<li><a href="page-testimonials.html">Отзывы</a></li>
+									<li><a href="page-certificates.html">Сертификаты</a></li>
+									<li><a href="page-clients.html">Наши клиенты</a></li>
 								</ul>
 							</li>
-							<li><a href="#">Контакты</a></li>
+							<li><a href="page-contacts.html">Контакты</a></li>
 						</ul>
 						<ul class="social-list">
-							<li><a href="#" target="_blank" rel="nofollow noopener"><img src="./images/dist/icons/instagram.svg" alt=""></a></li>
-							<li><a href="#" target="_blank" rel="nofollow noopener"><img src="./images/dist/icons/youtube.svg" alt=""></a></li>
+							<li><a href="#" target="_blank" rel="nofollow noopener"><img src="./images/dist/icons/instagram.svg" alt="Instagram"></a></li>
+							<li><a href="#" target="_blank" rel="nofollow noopener"><img src="./images/dist/icons/youtube.svg" alt="YouTube"></a></li>
 						</ul>
 					</div><!-- /.header-top-nav -->
 
