--- a/app/parts/products-card/product-2.html
+++ b/app/parts/products-card/product-2.html
@@ -3,7 +3,7 @@
 		<button class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#quickViewProductModal">Быстрый просмотр</button>
 	</div>
 	<div class="card-label card-label--red">Хит продаж</div>
-	<a href="#" class="card-gallery" title="AN-Motors ASL500KIT FULL комплект автоматики для откатных ворот">
+	<a href="page-shop-product.html" class="card-gallery" title="AN-Motors ASL500KIT FULL комплект автоматики для откатных ворот">
 		<div class="card-gallery-item _active">
 			<span class="card-gallery-item-nav"></span>
 			<img class="lazy" src="./images/dist/products/2.jpg" alt="">
@@ -28,7 +28,7 @@
 	<div class="card-body">
 		<div class="card-meta">
 			<div class="stock stock-in">В наличии</div>
-			<a href="#" class="permalink blue-link">AN-Motors ASL500KIT FULL комплект автоматики для откатных ворот</a>
+			<a href="page-shop-product.html" class="permalink blue-link">AN-Motors ASL500KIT FULL комплект автоматики для откатных ворот</a>
 			<div class="price">
 				<ins>23 600 Руб.</ins>
 			</div>
