Added Headhesive.js library for sticky header.

--- a/app/page-brands-single.html
+++ b/app/page-brands-single.html
@@ -143,6 +143,9 @@
 							</a>
 						</div><!-- /.col -->
 					</div><!-- /.row -->
+					<div class="s-brands-link">
+						<a href="#" class="link-arrow">Смотреть все товары <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+					</div>
 				</section>
 				<section class="mt-48">
 					<div class="section-heading mb-32">
@@ -262,6 +265,9 @@
 							</a>
 						</div><!-- /.col -->
 					</div><!-- /.row -->
+					<div class="s-brands-link">
+						<a href="#" class="link-arrow">Смотреть все товары <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+					</div>
 				</section>
 				<section class="mt-48">
 					<div class="section-heading mb-32">
@@ -381,8 +387,11 @@
 							</a>
 						</div><!-- /.col -->
 					</div><!-- /.row -->
+					<div class="s-brands-link">
+						<a href="#" class="link-arrow">Смотреть все товары <svg class="icon icon-arrow-right"><use xlink:href="images/symbol-defs.svg#arrow-right"></use></svg></a>
+					</div>
 				</section>
-				
+
 				<!-- Article -->
 				<div class="row justify-content-center mt-64">
 					<article class="col-lg-10 col-xxl-8">
