--- a/app/page-shop-cart.html
+++ b/app/page-shop-cart.html
@@ -42,7 +42,7 @@
 					<div class="s-cart-table-body">
 						<form class="s-cart-table-item">
 							<div class="product">
-								<a href="#" class="card-product">
+								<a href="page-shop-product.html" class="card-product">
 									<div class="card-photo img-cover">
 										<img src="./images/dist/products/1.png" alt="">
 									</div>
@@ -81,7 +81,7 @@
 						</form><!-- /.s-cart-table-item -->
 						<form class="s-cart-table-item">
 							<div class="product">
-								<a href="#" class="card-product">
+								<a href="page-shop-product.html" class="card-product">
 									<div class="card-photo img-cover">
 										<img src="./images/dist/products/2.jpg" alt="">
 									</div>
@@ -120,7 +120,7 @@
 						</form><!-- /.s-cart-table-item -->
 						<form class="s-cart-table-item">
 							<div class="product">
-								<a href="#" class="card-product">
+								<a href="page-shop-product.html" class="card-product">
 									<div class="card-photo img-cover">
 										<img src="./images/dist/products/3.jpg" alt="">
 									</div>
