--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -159,9 +159,9 @@
 
 	<!--#include virtual="/parts/modals/quick-view-product.html" -->
 
-	<!--#include virtual="/parts/modals/discount-product.html" -->
+	<script src="./js/app.min.js"></script>
 
-	<script src="js/app.min.js"></script>
+</script>
 
 </body>
 </html>
