--- a/app/parts/header.html
+++ b/app/parts/header.html
@@ -6,10 +6,9 @@
 	<meta name="description" content="Автоматика для ворот 750">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-	<link rel="icon" href="images/favicon.png">
-	<meta property="og:image" content="images/dist/preview.jpg">
+	<link rel="icon" href="./images/favicon.png">
 
-	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
 
@@ -104,7 +103,7 @@
 			<div class="container">
 				<div class="row flex-nowrap align-items-center">
 
-					<div class="col-auto header-middle-burger d-xxl-none">
+					<div class="col-auto header-middle-burger">
 						<button class="toggle-mmenu-btn">
 							<svg class="icon icon-bars"><use xlink:href="images/symbol-defs.svg#bars"></use></svg>
 						</button>
